data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3600.wast
;; 9. **Test Description**:    - **Constraint Checked**: Recursive Function Mismanagement    - **CFG Relevance**: Tests recursive function calls to see if the call stack is managed accurately and does not overflow/mismanage.    - **Expected Behavior**: Misalignment in stack depth or argument count leading to inconsistent behavior in recursive calls.

(assert_invalid
  (module
    (type $t (func (param i32) (result i32)))
    (func $recursive (type $t) (param $p i32) (result i32)
      (local.get $p)
      (i32.const 1)
      (i32.add)
      (i32.const 100)
      (if (result i32)
        (then
          (call $recursive)
        )
      )
    )
    (func (call $recursive (i32.const 0)))
  )
  "recursive function mismanagement"
)